--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -25,9 +25,20 @@
 	  </th>
   </tr>
 </table>
-　
-<div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+<div class= "row">
+  <% unless user == current_user %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info btn-block" %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success btn-block" %>
+    <% end %>
   <% end %>
+</div>
+
+<div class='row'>
+	<% if user == current_user %>
+	  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+	    <i class="fas fa-user-cog"></i>
+	  <% end %>
+	<% end %>
 </div>
