--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -33,6 +33,9 @@
       <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success btn-block" %>
     <% end %>
   <% end %>
+  <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+  	<%= link_to 'chatを始める', chat_path(user.id), class: "ml-3" %>
+	<% end %>
 </div>
 
 <div class='row'>
