--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,6 +20,7 @@
             <%= render "favorites/favorite", book: book %>
         </td>
         <td>コメント数:<span id= "comment_count"><%= book.book_comments.count %></td>
+        <td>閲覧数: <%= book.read_counts.count %></td>
       </tr>
     <% end %>
   </tbody>
