--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,9 +1,10 @@
 <% if book.favorited_by?(current_user) %>
   <%= link_to book_favorites_path(book),method: :delete, remote: true do %>
-    ♥<%= book.favorites.count %>
+    <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
+    <span style="color: red;"><%= book.favorites.count %></span>
   <% end %>
 <% else %>
   <%= link_to book_favorites_path(book),method: :post,  remote: true do %>
-    ♡<%= book.favorites.count %>
+    <i class="fa-regular fa-heart"></i><%= book.favorites.count %>
   <% end %>
 <% end %>
