--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,26 +13,25 @@
       <div class="table_width">
         <table class="table table-bordered">
           <thead>
-          <tr>
-            <th>今日の投稿</th>
-            <th>昨日の投稿</th>
-            <th>前日比</th>
-          </tr>
+            <tr>
+              <th>今日の投稿</th>
+              <th>昨日の投稿</th>
+              <th>前日比</th>
+            </tr>
           </thead>
           <tbody>
             <tr>
-    	  <td><%= @today_book.count %></td>
-    	  <td><%= @yesterday_book.count %></td>
-            <% if @yesterday_book.count == 0 %>
-    	  <td>前日の投稿はなし</td>
-            <% else %>
-    	  <td><% @the_day_before =   @today_book.count / @yesterday_book.count  %>
-    	  <%= (@the_day_before * 100).round %>%</td>
-            <% end %>
+          	  <td><%= @today_book.count %></td>
+          	  <td><%= @yesterday_book.count %></td>
+                  <% if @yesterday_book.count == 0 %>
+          	  <td>前日の投稿はなし</td>
+                  <% else %>
+          	  <td><% @the_day_before =   @today_book.count / @yesterday_book.count  %>
+          	  <%= (@the_day_before * 100).round %>%</td>
+                  <% end %>
             </tr>
           </tbody>
         </table>
-          
         <table class="table table-bordered">
           <thead>
           <tr>
@@ -43,18 +42,90 @@
           </thead>
           <tbody>
             <tr>
-    	  <td><%= @this_week_book.count %></td>
-    	  <td><%= @last_week_book.count %></td>
-            <% if @last_week_book.count == 0 %>
-    	  <td>先週の投稿はなし</td>
-            <% else %>
-    	  <td><% @the_week_before = @this_week_book.count / @last_week_book.count  %>
-    	  <%= (@the_week_before * 100).round %>%</td>
-            <% end %>
+          	  <td><%= @this_week_book.count %></td>
+          	  <td><%= @last_week_book.count %></td>
+                  <% if @last_week_book.count == 0 %>
+          	  <td>先週の投稿はなし</td>
+                  <% else %>
+          	  <td><% @the_week_before = @this_week_book.count / @last_week_book.count  %>
+          	  <%= (@the_week_before * 100).round %>%</td>
+                  <% end %>
             </tr>
           </tbody>
         </table>
-      </div>
+        <h3>7日分の投稿数</h3>
+        <div class="table_width">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>6日前</th>
+                <th>5日前</th>
+                <th>4日前</th>
+                <th>3日前</th>
+                <th>2日前</th>
+                <th>1日前</th>
+                <th>今日</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+              	<td><%= @books.created_days_ago(6).count %></td>
+              	<td><%= @books.created_days_ago(5).count %></td>
+              	<td><%= @books.created_days_ago(4).count %></td>
+              	<td><%= @books.created_days_ago(3).count %></td>
+              	<td><%= @books.created_days_ago(2).count %></td>
+              	<td><%= @books.created_days_ago(1).count %></td>
+              	<td><%= @books.created_days_ago(0).count %></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <canvas id="myLineChart"></canvas>
+          <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+            <script>
+              $(document).on('turbolinks:load', function() {
+                var ctx = document.getElementById("myLineChart");
+                var myLineChart = new Chart(ctx, {
+                  type: 'line',
+                  data: {
+                    labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
+                    datasets: [
+                      {
+                        label: '投稿した本の数',
+                        data: [
+                          <%= @books.created_days_ago(6).count %>,
+                          <%= @books.created_days_ago(5).count %>, 
+                          <%= @books.created_days_ago(4).count %>, 
+                          <%= @books.created_days_ago(3).count %>, 
+                          <%= @books.created_days_ago(2).count %>, 
+                          <%= @books.created_days_ago(1).count %>, 
+                          <%= @books.created_days_ago(0).count %>
+                        ],
+                        borderColor: "rgba(0,0,255,1)",
+                        backgroundColor: "rgba(0,0,0,0)",
+                        tension: 0.4
+                      }
+                    ],
+                  },
+                  options: {
+                    title: {
+                      display: true,
+                      text: '7日間の投稿数の比較'
+                    },
+                    responsive: true,
+                    scales: {
+                      y:{
+                        suggestedMin: 0,
+                        suggestedMax: 10
+                      },
+                      x:{
+                        stacked: true
+                      },
+                    },
+                  }
+                });
+              });
+            </script>
     </div>
   </div>
 </div>
