--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -81,51 +81,61 @@
           </table>
         </div>
         <canvas id="myLineChart"></canvas>
-          <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-            <script>
-              $(document).on('turbolinks:load', function() {
-                var ctx = document.getElementById("myLineChart");
-                var myLineChart = new Chart(ctx, {
-                  type: 'line',
-                  data: {
-                    labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
-                    datasets: [
-                      {
-                        label: '投稿した本の数',
-                        data: [
-                          <%= @books.created_days_ago(6).count %>,
-                          <%= @books.created_days_ago(5).count %>, 
-                          <%= @books.created_days_ago(4).count %>, 
-                          <%= @books.created_days_ago(3).count %>, 
-                          <%= @books.created_days_ago(2).count %>, 
-                          <%= @books.created_days_ago(1).count %>, 
-                          <%= @books.created_days_ago(0).count %>
-                        ],
-                        borderColor: "rgba(0,0,255,1)",
-                        backgroundColor: "rgba(0,0,0,0)",
-                        tension: 0.4
-                      }
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+        <script>
+          $(document).on('turbolinks:load', function() {
+            var ctx = document.getElementById("myLineChart");
+            var myLineChart = new Chart(ctx, {
+              type: 'line',
+              data: {
+                labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
+                datasets: [
+                  {
+                    label: '投稿した本の数',
+                    data: [
+                      <%= @books.created_days_ago(6).count %>,
+                      <%= @books.created_days_ago(5).count %>, 
+                      <%= @books.created_days_ago(4).count %>, 
+                      <%= @books.created_days_ago(3).count %>, 
+                      <%= @books.created_days_ago(2).count %>, 
+                      <%= @books.created_days_ago(1).count %>, 
+                      <%= @books.created_days_ago(0).count %>
                     ],
-                  },
-                  options: {
-                    title: {
-                      display: true,
-                      text: '7日間の投稿数の比較'
-                    },
-                    responsive: true,
-                    scales: {
-                      y:{
-                        suggestedMin: 0,
-                        suggestedMax: 10
-                      },
-                      x:{
-                        stacked: true
-                      },
-                    },
+                    borderColor: "rgba(0,0,255,1)",
+                    backgroundColor: "rgba(0,0,0,0)",
+                    tension: 0.4
                   }
-                });
-              });
-            </script>
+                ],
+              },
+              options: {
+                title: {
+                  display: true,
+                  text: '7日間の投稿数の比較'
+                },
+                responsive: true,
+                scales: {
+                  y:{
+                    suggestedMin: 0,
+                    suggestedMax: 10
+                  },
+                  x:{
+                    stacked: true
+                  },
+                },
+              }
+            });
+          });
+        </script>
+        <%= form_with url:user_search_path(@user), method: :get, local: false do |f| %>
+          <%= f.date_field :created_at %>
+          <%= f.submit '検索', class: "btn btn-primary" %>
+        <% end %>
+    
+        <div id="search_result">
+          <% if @search_book.present? %>
+            <%= render 'search', search_book: @search_book %>
+          <% end %>
+        </div>   
     </div>
   </div>
 </div>
