修正検索表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <% unless current_page?(root_path) %>
+      <%= render 'layouts/search' %>
+    <% end %>
       <main>
         <p id="notice"><%= notice %></p>
         <%= yield %>
