--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,8 +2,8 @@
   <%= flash[:notice] %>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render partial: "users/info", locals: { user: @user }%>
-      <%= render partial: "books/form", locals: { book: @book } %>
+      <%= render "users/info", user: @user  %>
+      <%= render "books/form", book: @book  %>
     </div>
 
     <div class='col-md-8 offset-md-1'>
