--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,8 +2,8 @@
 <%= flash[:notice] %>
   <div class='row'>
     <div class='col-md-3'>
-    <%= render partial: "users/info", locals: { user: @user }%>
-    <%= render partial: "books/form", locals: { book: @book } %>
+    <%= render "users/info", user: current_user %>
+    <%= render "books/form", book: @book %>
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Group Detail</h2>
@@ -29,6 +29,11 @@
             </td>
             <td><%= @group.name %></td>
             <td><%= @group.introduction %></td>
+            <td>
+              <% @group.users.each do |member| %>
+                <%= member.name %><br>
+              <% end %>
+            </td>
             <td>
               <% if @group.owner_id == current_user.id %>
                 <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
