--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,6 +8,7 @@
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
+  		<%= render "static.rate", book: @book %>
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
