--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -34,8 +34,12 @@
       <%= render "static.rate", book: book %>
     </div>
   <% end %>
-  
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <label>Tag</label>
+      <%= f.text_field :category,class: 'form-control book_category' %>
+    </div>
+    
+    <div class="form-group">
+      <%= f.submit class: 'btn btn-success' %>
+    </div>
+  <% end %>
