--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,4 +1,4 @@
-<div class= "row-md-4 offset-md-4">
+<div class= "row-md-2 offset-md-1">
   <% if user_signed_in? %>
     <div class= "search_form">
       <%= form_with url: search_path, local: true, method: :get do |f| %>
@@ -7,6 +7,7 @@
         <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
         <%= f.submit "検索", class: "btn btn-primary" %>
       <% end %>
+      <%= render 'tagsearches/tagsearch' %>
     </div>
   <% end %>
 </div>
